--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "genSpamPosts": "node genSpamPosts.js",
+    "spamPosts": "node spamPosts.js"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^4.3.2",
+    "aws-amplify": "^5.0.8",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "8.31.0",
